# playground

./: .gitignore  readme.md
dioxus-bore-bones/: Cargo.toml  Dioxus.toml
dioxus-jumpstart/: Cargo.toml  Dioxus.toml
dioxus-jumpstart/src/: main.rs
express-ws-sse/: README.md  package.json  pnpm-lock.yaml  server-sse-1.js  server-sse-identifier.js  server-ws-1.js  server-ws-2.js
go-chromedp/: go.mod  main.go
go-chromedp/pdf-template/: template-1.html
go-pzn/: go.work
go-pzn/basic-by-me/: __note.txt  alias.go  array.go  boolean.go  constant.go  conversion.go  go.mod  sample.go  string.go  variable.go
go-pzn/khalifa/: go.mod  helloworld.go  khalifa  sample.go
mediapipe-model-maker/: .gitignore  README.md  image_classifier.ipynb  img-classification.py  requirements.txt  test-load-model.py  test-mediapipe.py
mediapipe-nuxt-3/: nuxt.config.ts
mediapipe-nuxt-3/composables/: delay.ts  use-face-landmark.ts
nuxt-3/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
nuxt-3-firebase-ssr/: .env.example  .gitignore  nuxt.config.ts  package.json
nuxt-3-firebase-ssr/composables/: useFirebase.ts
nuxt-3-firebase-ssr/pages/: animal.vue
nuxt-3-nuxt-ui-2/: .gitignore  app.config.ts  nuxt.config.ts  package.json  readjson.js
nuxt-3-nuxt-ui-2/components/: TodoItem.vue
nuxt-3/pages/: cookie.vue  (+2 more)
playwright/: .env.example  cucumber.js  generate-excel-report.js  generate-report.ts  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
selenium/: cucumber.js  package.json  pnpm-lock.yaml  tsconfig.json
typescript/: index.ts  package.json  tsconfig.json
(+76 files in other folders)
